--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  
   "name": "contactform",
+  "homepage": "https://jpvc247.github.io/frontendmentor_form",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://jpvc247.github.io/frontendmentor_form",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,7 +17,8 @@
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
