Update deployment configuration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   
   "name": "contactform",
-  "homepage": "https://jpvc247.github.io/frontendmentor_form",
+  "homepage": "https://jpvc247.github.io/contactus",
   "private": true,
   "version": "0.0.0",
   "type": "module",
